# restaurant-api

./: .env  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  config.py  database.py  init-db.sh  init_db.py  main.py  pyproject.toml  run-tests.sh
api/restaurant/: crud.py  models.py  router.py  schemas.py
api/tests/: conftest.py  test_restaurants.py
