[tool.poetry]
name = "restaurant-api"
version = "1.0.0"
authors = ["Leandro Matayoshi <leandro.matayoshi@gmail.com>"]
description = "Simple restaurant API"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.20"
psycopg2 = "^2.8.6"
pydantic = {extras = ["email"], version = "^1.7.3"}
requests = "^2.25.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.js
  | \.ts
  | \.css
  | \.json
  | _build
  | buck-out
  | build
  | dist
)/
'''
